# bytelings-sessions

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
bytelings/: __init__.py  cli.py  info_toml.py  locator.py  patterns.py  progress.py  scaffolding.py  testing.py  ui.py  watcher.py
curriculum/: _byte.py  conftest.py  info.toml
curriculum/001-uv-setup-and-pytest/: README.md  apply.py  fluency_test.py  guided_test.py  solo.py  solo_test.py
curriculum/002-numbers-and-ops/: README.md  apply.py  guided.py  guided_test.py  solo_test.py
curriculum/003-booleans-truthiness-none/: README.md  fluency_test.py  guided.py  guided_test.py
curriculum/004-names-vs-values/: README.md  apply.py  fluency.py  fluency_test.py  guided.py  solo.py
curriculum/005-repl-and-type-hints/: apply.py  fluency_test.py  guided.py
curriculum/006-string-indexing-and-slicing/: README.md  apply.py  fluency_test.py  guided_test.py  solo_test.py
curriculum/007-string-methods-and-fstrings/: README.md  fluency_test.py  guided_test.py  solo_test.py
curriculum/008-string-immutability-and-concat-traps/: apply.py  fluency_test.py  guided.py  guided_test.py  solo.py
curriculum/009-encoding-bytes-vs-str/: README.md  fluency_test.py  guided_test.py  solo_test.py
curriculum/010-regex-essentials/: README.md  solo_test.py
curriculum/011-string-parsing-patterns/: README.md  apply.py  fluency.py  guided_test.py  solo.py
curriculum/012-list-basics/: apply.py  fluency_test.py  guided_test.py  solo.py  solo_test.py
curriculum/013-list-slicing-deep/: apply.py  fluency_test.py  solo.py
curriculum/014-iteration-idioms-enumerate-zip/: apply.py  fluency_test.py
curriculum/015-list-methods-and-mutation/: apply.py  fluency_test.py  solo.py  solo_test.py
curriculum/016-linear-search-and-counting-ops/: README.md  apply.py  fluency.py  fluency_test.py  guided_test.py  solo.py  solo_test.py
curriculum/017-bigo-notation-intro/: apply.py  fluency_test.py  guided_test.py
curriculum/017-what-is-hashing/: README.md  fluency_test.py  solo_test.py
curriculum/018-dict-basics/: README.md  apply.py  fluency_test.py  solo_test.py
curriculum/019-set-operations/: README.md  apply.py  fluency_test.py  guided.py  solo.py  solo_test.py
curriculum/020-defaultdict-and-counter/: README.md  apply.py  fluency_test.py
curriculum/021-what-is-hashing/: guided_test.py  solo_test.py
curriculum/022-bigo-notation-intro/: README.md  fluency.py  solo_test.py
curriculum/022-dict-vs-list-decision/: README.md  apply.py
curriculum/023-defining-and-calling-functions/: README.md  apply.py  fluency.py  fluency_test.py  guided_test.py  solo_test.py
curriculum/024-args-kwargs-defaults/: README.md  apply.py  fluency_test.py  solo.py  solo_test.py
curriculum/025-scope-legb-and-closures/: README.md  fluency_test.py  guided.py
curriculum/026-first-class-functions-and-lambdas/: README.md  apply.py  fluency_test.py  guided.py  guided_test.py
curriculum/027-decorators-basics/: README.md  apply.py  fluency_test.py  guided_test.py  solo.py  solo_test.py
curriculum/028-decorators-with-args-and-type-hints/: README.md  apply.py  fluency_test.py  guided_test.py  solo_test.py
curriculum/030-project-day-2-build-core/: README.md
curriculum/031-project-day-3-test-and-ship/: README.md
curriculum/032-list-dict-set-comprehensions/: solo.py
curriculum/033-generator-expressions/: README.md  apply.py  guided.py
curriculum/034-iterator-protocol/: README.md  apply.py  solo.py  (+1 more)
curriculum/phase-6-packaging-ast-capstone/capstone/day-129-capstone-day-2-scaffold/.starter/: pyproject.toml
curriculum/phase-6-packaging-ast-capstone/capstone/day-129-capstone-day-2-scaffold/.starter/src/habit/: __init__.py  core.py  storage.py
curriculum/phase-6-packaging-ast-capstone/capstone/day-129-capstone-day-2-scaffold/.starter/tests/: test_cli.py
curriculum/phase-6-packaging-ast-capstone/capstone/day-135-capstone-day-8-ship/.starter/: README.md  pyproject.toml
curriculum/phase-6-packaging-ast-capstone/capstone/day-135-capstone-day-8-ship/.starter/tests/: conftest.py
docs/: extras-c.md
scaffold/: pyproject.toml
scripts/: fix_content_refs.py  fix_frontmatter.py  migrate_v1_to_v2.py  restructure_m11.py  restructure_m6.py  tag_patterns.py
solutions/: README.md
tests/: conftest.py  test_cli.py  test_diagnose.py  test_info_toml.py  test_locator.py  test_migration.py  test_patterns.py  test_progress.py  test_ui.py  test_watcher.py
(+2015 files in other folders)
