[project]
name = "my-bytelings"
version = "0.0.0"
description = "Your local bytelings working folder. Edit the curriculum, save, watch tests turn green."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest>=8.0.0",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]

[tool.pytest.ini_options]
# No default testpaths: the watcher always invokes pytest on a specific
# rung's test file, and a bare `uv run pytest` from the project root would
# otherwise collect ~1500 intentionally-broken curriculum tests.
python_files = ["*_test.py", "test_*.py"]
addopts = "-q --import-mode=importlib"
norecursedirs = [".starter", ".venv", "__pycache__", ".git", "progress", "curriculum", "solutions"]

