[project]
name = "habit"
version = "0.1.0"
description = "Track tiny daily habits."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
habit = "habit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit"]
