[project]
name = "habit"
version = "0.1.0"
description = "Track tiny daily habits from the command line."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
habit = "habit.cli:main"

[project.urls]
Homepage = "https://example.com/habit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit"]
